--- a/posenet/demos/camera.html
+++ b/posenet/demos/camera.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>PoseNet - Camera Feed Demo</title>
+    <title>運動偵測-Beta 1</title>
     <style>
         .footer {
             position: fixed;
